--- a/6001_Francis.tex
+++ b/6001_Francis.tex
@@ -48,17 +48,16 @@ Bone marrow is a spongy tissue responsible to produce all body's blood cells, in
     The cytotoxic cell is a type of white blood cell that is the main effector in the adaptive immune system and is primarily activated by cytokines, so they can kill cells that are infected with virus or bacteria, cancer cells.
     \item [4)]
     Regulatory T cell:
-    Regulatory T cell, also called Tregs, is capable of regulatoring and suppressing harmful cells, they are the key components help to prevent excessive immune response and autoimmune disease.
+    Regulatory T cell, also called Tregs, is capable of regulating and suppressing harmful cells, they are the key components that help to prevent excessive immune response and autoimmune disease.
 \end{itemize}
-and equipped with the ability to distinguish the different between foreign molecules and body's own antigens.As T cells can identify self-structures and foreign antigens makes it become an critical elegant mechanism in immunse system.Apart from the tissue and organs component of bone marrow and thymus, other components comparised in immunse system also play critical role in making the system works smoothly,is capable of activating and moblilzing forces to prevent any  potential harmful susbstances such as toxic or allergenic substances enter through our mucosal surface.\medskip
+and equipped with the ability to distinguish the difference between foreign molecules and the body's own antigens. T cells can identify self-structures and foreign antigens make it become an critical elegant mechanism in the immune system. Apart from the tissue and organs component of bone marrow and thymus, other components comprised in the immune system also play a critical role in making the system works smoothly is capable of activating and mobilizing forces to prevent any potentially harmful substances such as toxic or allergenic substances enter through our mucosal surface..\medskip
 
-Before taking action to response and control the pathogen microbes, toxin and exogenous threats, it is important for immune system to initial the mechanisms of self-nonself recognition, to differntiate self from non-self, in other words, is to distingush the antigens belong in our body from foreign antigenes such as toxins, chemicals, drugs which may envoking the immunse system called immunogens.The mechanisms of discrimination of self from nonself is not noly factilite thr the process to destory  or clear up a borad range harmful microbial cells, toxic and allergenic substances, but aslo to avoid these destructive mechanisms demage mammalian host's own tissue, resulting in broad class of autoimmune disorders.\medskip
+Before taking action to respond and control the pathogen microbes, toxin, and exogenous threats, it is important for the immune system to initiate the mechanisms of self-nonself recognition, to differentiate self from non-self, in other words, is to distinguish the antigens belong in our body from foreign antigens such as toxins, chemicals, drugs which may be evoking the immune system called immunogens. The mechanisms of discrimination of self from non-self are not only facilitated the process to destroy or clear up a board range of harmful microbial cells, toxic and allergenic substances but also to avoid these destructive mechanisms damage mammalian host's own tissue, resulting in a broad class of autoimmune disorders.\medskip
 
+The antigen is a complex nature of protein substances that will bind particularly to a receptor molecule and made by the body's infection-fighting white blood cells(lymphocytes). Antigenes with molecules can be found in several places such as viruses, bacteria, and fungi, sometimes located on the surface of foreign substances, such as dust and organ transplantation. An antigen may or may not stimulate an immune response, especially activating lymphocytes when it binds to a receptor molecule, even though antigenes usually have a diversity of three-dimensional patterns on distinct places of their surfaces and each pattern such as an antigenic determinant, or epitope has the ability to stimulate different lymphocyte receptor to multiply and initiate the immune response, for example, the generation of antibodies or the activation of cytotoxic cells. Although the truth that some antigenes can not evoke the immune system by themselves, still helpful in the study of an immune response, as they can join with other larger and more complex protein molecules to become immunogenic. Generally speaking, antigens can be divide into two main divisions: foreign(or heteroantigens) and antigenes. 
+Foreign antigens are coming from the outside of the body, there are a variety of substances can be classified into foreign antigens, example includes the substance generated from virus, bacterial and protozoa, some of the protein in foods, the serum and red blood cells components from other people. In contrast to foreign antigens, Autoantigens resides within the body.\medskip
 
-Antigen, is a complex natural of protein substances that will binds particularly to a receptor molecule and mady by the body's infection-fightiing whitle blood cells(lymphocytes). Antigenes with molecules can be found on several places such as virus, bacteria and fungi, sometimes located on the surface of foreign substances, such as dust and organ tansplantation. A antigen may or may not stimulating an immune response, especially activating lymphocytes when it binds to a receptor molecule, even thogh a antigenes usualluy have diversity of three-dimensional patterns on distnct places of  their surfaces and each of pattern such as an antigenic determinant, or epitope has ability to stimulate different different lymphocyte receptor to  multiply and initate the an immune response, for example, the generation of antibodies or the activation of cytotoxic cells.Although the truth that some of antigenes can not evoke the immune system by temselves, but still helpful in the study of immunse response, as they can join with other larger and more complex  protein molecules to becomne immunogenic.General speaking, antigens can be divide into two main divisions: foregin(or heteroantigens) and antigenes.
-Foregin antigens is coming from the outside of body,there are variety of substances can be classified into foreign antigens, example include the substance generated from virus, bacterial and protozoa, some of protein in foods, the serm and red blood cells components from other person. In contrast to foreign antigens,Autoantigens is reside within the body.\medskip
-
-In generally, an indivdual without autoimmune disorders,his or her body is able to carry out the process of discriminting self from noself by inducing the immune system to generate the autoantibodies or destory the anitgen directly,which is called an immunogen.
+In general, an individual without autoimmune disorders, his or her body can carry out the process of discriminating self from no-self by inducing the immune system to generate the autoantibodies or destroy the antigen directly, which is called an immunogen.
 
 
  \begin{figure}[H]
@@ -69,32 +68,31 @@ In generally, an indivdual without autoimmune disorders,his or her body is able 
 \end{figure}
 
 \section{The innate and adaptive immune systems}
-The immune response is made up of  two parts: the innate (non-specialized) immunity and the adaptive (specialized) immunity. The innate immunity response to an invader fast acting and non-sepcific, which is a immunity that a person is born with, while for the adaptive immunity which is not as immedicate as innate immunity, this type of immunity is usually slow to response a new invader at the very begining. Lymphocytes are the type of white blood cell (B and T cells) take charge of the adaptive immunity, when they first encounters foreign substances (antigens),they need time to learn, adapt and remember.The components of adaptive immunity will learn the best way to attack each invader and begin to estalish a memory for that invader.Thereafter, the respond will be improved beacuse the memroy is formed for the past invader, so B and T cells can identify previously encountered invader in a shorest of time, working together to desotry it even more efficeiently. \medskip
+The immune response is made up of two parts: the innate (non-specialized) immunity and the adaptive (specialized) immunity. The innate immune response to an invader fast-acting and non-specific, which is the immunity that a person is born with, while for adaptive immunity which is not as immediate as innate immunity, this type of immunity is usually slow to respond to a new invader at the very beginning. Lymphocytes are the type of white blood cell (B and T cells) take charge of adaptive immunity, when they first encounter foreign substances (antigens), they need time to learn, adapt and remember. The components of adaptive immunity will learn the best way to attack each invader and begin to establish a memory for that invader. Thereafter, the response will be improved because the memory is formed for the past invader, so B and T cells can identify previously encountered invaders in the shortest of time, working together to destroy it even more efficiently.\medskip
 
-People usually describe the innate and adpative immune system as contrasting, separate arms of the host response;however,these two systems cooperate with each other and work on different tasks.
-
+People usually describe the innate and adaptive immune system as contrasting, separate arms of the host response; however, these two systems cooperate and work on different tasks.
 
 \subsection{Innate defence system}
-The innate immune system offer a first-line barriers and non-specife response to keep potential pathogen, which include  viruses, bacteria, fungi, protozoans, and worm from entering you body. It acts very quickly to prevent the transmission and movement of germs and foreign substances throughout the body.For example, the innate system will destory a bacteria within a few hours, when it has entered to the skin via a sma;wound.The reson why the innate system referred as "nonspecific" immune system is that it responds in  the same way to specified virus and bacterial that it recognizes.The innate immune system provides nonspecific defense protection which is made up of a number of defense mechanisms,which include Physical barriers,Chemical barriers and Cellular defenses.
+The innate immune system offers a first-line barrier and non-specific response to keep potential pathogens, which includes viruses, bacteria, fungi, protozoans, and worm from entering your body. It acts very quickly to prevent the transmission and movement of germs and foreign substances throughout the body. For example, the innate system will destroy bacteria within a few hours, when it has entered the skin via a small wound. The reason why the innate system is referred to as a "nonspecific" immune system is that it responds in the same way to the specified virus and bacterial that it recognizes. The innate immune system provides nonspecific defense protection which is made up of several defense mechanisms, which include Physical barriers, Chemical barriers, and Cellular defenses.
 \begin{itemize}
     \item [1)] 
-    Physical barriers : All outer and inner surfaces of our body are belong to the physical
-    barriers, which is the first line of defence in fighting invasion by microbes and parasites. These include the skin and mucous membranes.Human skin include a outer layper of cell which is considered as mechanical barrier to infection.Furthermore, skin gland will secrete a variety of chemicals substances or enzyme,for example secrete oleic acid to kill bacterial or lysozyme to destory the outer wall of bacterial.There is a variety of mucous membranes surround our body organs, to protect the body from being infected and keep those tissue moisturized by secreting mucus.
+    Physical barriers: All outer and inner surfaces of our body are belong to the physical
+    barriers, which is the first line of defense in fighting invasion by microbes and parasites. These include the skin and mucous membranes. Human skin includes an outer layer of the cell which is considered as a mechanical barrier to infection. Furthermore, the skin gland will secrete a variety of chemicals substances, or enzymes, for example, secrete oleic acid to kill bacterial or lysozyme to destroy the outer wall of bacterial. There is a variety of mucous membranes that surround our body organs, to protect the body from being infected and keep those tissue moisturized by secreting mucus.
     \item [2)]
-    Chemical barriers: The primarily function of chemical barriers such as tears, mucous and stomach acid, is to harm and destory the invader which about to enter the internal tissues.
+    Chemical barriers: The primary function of chemical barriers such as tears, mucous and stomach acid, is to harm and destroy the invader which about to enter the internal tissues.
     \item [3)]
-    Cellular barriers: The cellers in the innate immune system are nonspecific effectors cells such as scavanger cells and natural killer cells, they will neutralize  or destory those pathogens and substances that are likely dangerous to our body. 
+    Cellular barriers: The cellular in the innate immune system are nonspecific effectors cells such as scavenger cells and natural killer cells, they will neutralize or destroy those pathogens and substances that are likely dangerous to our body. 
 \end{itemize}
 
 \subsection{Adaptive defence system}
-The adaptive defence system will becoming prominent defence after the first line of host denfence.
-The second line of protection is called adaptive immunity, we also referred it as acquired immunity or sepcific immumity and is only found in vertebrates and will not always exits thorughout an individula’s entire lifespan.It is much slower to respond than the innate immunate response. as the adaptive immune response is the clonl expansion of T and B cells, which takes the body time to increase the number of T and  lymphocytes.However, it is more accute and robust than the innate immune system, the adaptive immune system is able to response faster when an indivdual met the some pathogen in the seond time.The increased speed is due to memory cells. 
+The adaptive defense system will be becoming a prominent defense after the first line of host defense.
+The second line of protection is called adaptive immunity, we also referred it as acquired immunity or specific immunity, and is only found in vertebrates and will not always exist throughout an individual's entire lifespan. It is much slower to respond than the innate immunity response. the adaptive immune response is the clone expansion of T and B cells, which takes the body time to increase the number of T and lymphocytes. However, it is more accurate and robust than the innate immune system, the adaptive immune system can respond faster when an individual met some pathogen for the second time. The increased speed is due to memory cells. 
 
 \subsection{Innate vs adaptive immunity}
-Give comparison between innate and adaptive defence system.The innate immunse response is immedicate with limited power to stop the spread of germs. the adaptive immune response is particularly sepcific, long-term(over 96 hours).In term of the cell types involved in both of immunity are different.In the innate immune response which includes macrophages, neutrophils, eosinophils;while for adaptive immune response  are based primarily on the antigen-specific receptors of T- and B-lymphocytes.
+Give a comparison between innate and adaptive defense system. The innate immune response is immediate with limited power to stop the spread of germs. the adaptive immune response is particularly specific, long-term(over 96 hours).In terms of the cell types involved in both immunity are different. In the innate immune response which includes macrophages, neutrophils, eosinophils; while for adaptive immune response are based primarily on the antigen-specific receptors of T- and B-lymphocytes.
 
 \section{CONCLUSION}
-The immunse system consists of many components such as cellular  components,molecular components to protect us from a universe of pathogenic microbes.Understanding the function of different components will allows for improvement in vaccines,immunomodulatory therapeutics as well as avoidance of unexpected tissue injury.
+The immune system consists of many components such as cellular components, molecular components to protect us from a universe of pathogenic microbes. Understanding the function of different components will allow for improvement in vaccines, immunomodulatory therapeutics as well as avoidance of unexpected tissue injury.
 
 
 \emergencystretch=1em
