--- a/6003_kennth.tex
+++ b/6003_kennth.tex
@@ -58,7 +58,7 @@ The method Zona drilling was completed through acidic Tyrode’s (AT) medium to 
 A more direct way to assist the fertilization process is the method called  subzonal insemination (SUZI),which involves in the process of placeing fewer spermatozoas straightly  into the perivitelline space,to avoid the incidence of polyspermy.The appearance of subzonal inseminating is somewhat successful, as which have been applied successfully to treat even male with severely impaired sperm characteristics such as impaired progressive motility.Thus,it is superior to partial zona dissection.\medskip
 
 The dominant progression in the field of assisted
-fertilization was Intracytoplasmic sperm injection (ICSI).There is doubt that intracytoplasmic sperm injection is currently most outstanding  accomplishment in the field of assisted which is a well established method widely used worldwide to treat infertility.Intracytoplasmic sperm injection was dervied from the onventional in vitro fertilization (IVF),but there is slightly difference between ICSI and IVF. Intracytoplasmic sperm injection designed to inject a single spermatozoon into an oocyte cytoplasm by using a glass micropipette
+fertilization was Intracytoplasmic sperm injection (ICSI).There is doubt that intracytoplasmic sperm injection is currently most outstanding  accomplishment in the field of assisted which is a well established method widely used worldwide to treat infertility.Intracytoplasmic sperm injection was dervied from the onventional in vitro fertilization (IVF),but there is slightly difference between ICSI and IVF. Intracytoplasmic sperm injection designed to inject a single spermatozoon into an oocyte cytoplasm by using a glass micropipette;while for 
 
 The micromanipulation techniques that were developed to assist fertilization
 include partial zona dissection (PZD), 
