--- a/6003_kennth.tex
+++ b/6003_kennth.tex
@@ -73,12 +73,7 @@ After grasping the immobilized spermatozoa, the injection pipette penetrates the
 
 
 \subsection{ICSI for male factor infertility}
-Various factors can results in male infertility,inclusive of reduced sperm production,abnormal spermatozoa function as well as  obstruction of the tract of spermatozoa.Among all of these, Azoospermia is defined as the medical condition of complete absence of spermatozoa in the ejaculate due to spermatogenic failure.In humans, aroud about 1\% of the male population affected by the Azoospermia.Azoospermia can be segregate into two broad categories: obstructive azoospermia and nonobstructive azoospermia. Obstructive azoospermia is a common cause of male infertility which is featured by an blockage or an absence of the reproductive system hamper the spermatozoa entering the seminal plasma before ejaculation.The cause of Obstructive Azoospermia is due to the mutual obstruction of the seminal ducts,In generally, the problem can be solved by retrieveing from the epididymides or testicles, as noraml spermatogenesis in men with obstructive azoospermia is confirmed by histopathological examination. Non obstructive azoospermia is caused by azoospermia absent or seriously decreased sperm generation by the testis,which is highly associated with untreatable testicular disorders.Both of 
-
-
-
-
-
+Various factors can results in male infertility,inclusive of reduced sperm production,abnormal spermatozoa function as well as  obstruction of the tract of spermatozoa.Among all of these, Azoospermia is defined as the medical condition of complete absence of spermatozoa in the ejaculate due to spermatogenic failure.In humans, aroud about 1\% of the male population affected by the Azoospermia.Azoospermia can be segregate into two broad categories: a genital tract obstruction (obstructive azoospermia)  and  spermatogenic failure (non-obstructive azoospermia).Obstructive azoospermia is a common cause of male infertility which is featured by an blockage or an absence of the reproductive system hamper the spermatozoa entering the seminal plasma before ejaculation.The cause of Obstructive Azoospermia is due to the mutual obstruction of the seminal ducts,In generally, the problem can be solved by retrieveing from the epididymides or testicles, as noraml spermatogenesis in men with obstructive azoospermia is confirmed by histopathological examination. Non obstructive azoospermia is caused by azoospermia absent or seriously decreased sperm generation by the testis,which is highly associated with untreatable testicular disorders.To enable men with obstructive azoospermia and nonobstructive azoospermia have sufficent number of spermatozoa,percutaneous acquisition and open surgery are the two methods commonly used to obtain spermatozoa from epididymal or testicular.The retrieved sperms are then used to fertiliize egg through ICSI techniques.
 
 
 
@@ -89,13 +84,14 @@ Various factors can results in male infertility,inclusive of reduced sperm produ
     core facilities.}
 \end{figure}
 
-\subsection{Azoospermia}
-Azoospermia is 
-
-
-
-
-
+\subsection{LIMITS AND CONCERNS REGARDING ICSI}
+As ICSI becomes an standard and most common method of fertilization used for ART.several concerns have been  rasied regarding to its harmful effects on consequent embryo and children.With the aid of ICSI in fertilization,it is possible to bypass the natural selection of the sperm for fertilization, however the sperm with defect characteristics will pass on to the next generation.According to the the resarch report, one fifth of man with azoospermia or severe oligospermia,they have microdeletions in the long arm of the Y chromosome and transmitted to the male offspring, as they are usually the main candidate for ICSI.Apart from the problem of transmitiing genetic defects to offspring, ICSI also casue detrimental effects on the development of embryo, as the process of sperm injection may unavoidably casue physical damages to the oocyte,thereby,influencing the subsequent embryo development.
+\section{CONCLUSION}
+ICSI has expanded our ability to treat male with severe oligospermia,asthenospermia,and teratospermia without requiring
+to requiring sperm undergoes acrosome reaction.In spite of its success, further investigation must address several major
+concerns: [1] oocyte damage; [2] the arbitrary selection
+of gametes; [3] the genetic integrity of the embryo;
+and [4] ensuing healthy live birth.
 
 \emergencystretch=1em
 \printbibliography[title=Reference]
